dynamically selecting divs and adding feature

--- a/page.html
+++ b/page.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="draggable" ondblclick="return dclick()">
-      <div id="start">start</div>
-      <div id="end">end</div>
+      <div id="start" class="dnd">start</div>
+      <div id="end" class="dnd">end</div>
     </div>
 
     <!-- <div
